--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
     "@react-spring/parallax": "^9.4.5",
+    "bootstrap": "^4.0.0-alpha.6",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^18.0.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
