--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "@mui/x-data-grid": "^5.12.0",
     "@react-spring/parallax": "^9.4.5",
     "bootstrap": "^4.0.0-alpha.6",
+    "md5": "^2.3.0",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-bootstrap": "^0.32.1",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.33.0",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-spring": "^9.4.5",
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
