--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@mui/x-data-grid": "^5.12.0",
+    "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@react-spring/parallax": "^9.4.5",
     "bootstrap": "^4.0.0-alpha.6",
     "md5": "^2.3.0",
@@ -20,6 +21,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^0.32.1",
     "react-cookie-consent": "^7.5.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.33.0",
     "react-query": "^3.39.1",
