--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-data-grid": "^5.12.0",
     "@mui/x-date-pickers": "^5.0.0-alpha.7",
     "@react-spring/parallax": "^9.4.5",
+    "axios": "^0.27.2",
     "bootstrap": "^4.0.0-alpha.6",
     "md5": "^2.3.0",
     "prettier": "^2.6.2",
