--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-bootstrap": "^0.32.1",
+    "react-confetti": "^6.1.0",
     "react-cookie-consent": "^7.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
